--- a/css/map.css
+++ b/css/map.css
@@ -21,17 +21,32 @@
 
 
 .map_instructions {
-  margin: 0 50px;
+  margin: 0 33px;
   font-size: 18px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 
 .map_leftCol .localservices-search {
     background-color: #BCE1E1;
     font-size: 2vw;
-    width: 97%;
+    width: 90%;
 }
 
+.map_leftCol blockquote {
+  width: 100%;
+  background-color: rgb(188,225,225);
+  margin: 0;
+    border-radius: 30px;
+    padding: 38px;
+    padding-bottom: 20px;
+}
+
+.map_leftCol blockquote p {
+    font-size: 1.5vw;
+    margin-bottom: 29px;
+}
 
 .map_leftCol input::-webkit-input-placeholder {
   font-size  : 20px;
@@ -42,13 +57,13 @@
 }
 
 .service_details {
-  color: #fff;
+  color: #808080;
   margin: 0 9%;
   transition: opacity 0.5s ease;
 }
 
 .service_details .service_details__website a {
-  color: #fff;
+  color: #808080;
 }
 
 .service_details .service_details__name {
@@ -65,6 +80,11 @@
   display: none;
 }
 
+#js_service_back_link {
+  font-size: 22px;
+    color: #505050;
+}
+
 .service_details .service_details__overview {
   font-weight: 100
 }
@@ -78,10 +98,14 @@ input:focus::-moz-placeholder { color:transparent; }
 .search_results {
   display: none;
   margin: 0 9%;
+  border-top: 1px solid #808080;
+  padding-top: 10px;
+    color: #505050;
+    font-size: 22px;
 }
 
 .search_results a {
-  color: #fff;
+  color: #808080;
   font-size: 1.5vw;
   text-decoration: none;
 }
@@ -119,7 +143,16 @@ input:focus::-moz-placeholder { color:transparent; }
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1700px) {
+  #map {
+    height: 81.8%;
 
+  }
+
+  .map_leftCol {
+
+    height: 81.8%;
+
+  }
 
 }
 
