--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html, body {
   height     : 100%;
   margin     : 0;
   padding    : 0;
-  font-family: "sofia-pro-soft",sans-serif;
+  font-family: "Trebuchet MS";
   font-weight: lighter;
   box-sizing : border-box;
   font-size  : 1em;
