--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -99,7 +99,7 @@ input::-moz-placeholder {
 /* Small Devices, Tablets Portrait */
 @media only screen and (min-width : 768px) {
 
-  @-moz-document url-prefix() {
+/*  @-moz-document url-prefix() {
     .home .localservices-search--container{
       top             : 111px;
     }
@@ -107,7 +107,7 @@ input::-moz-placeholder {
 
   .home .localservices-search--container{
       top             : 168px;
-   }
+   }*/
 
   .localservices-search {
     font-size: 5vw;
@@ -131,10 +131,10 @@ input::-moz-placeholder {
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
 
-  .home .localservices-search--container{
+/*  .home .localservices-search--container{
       top             : 67px;
       height          : 84px;
-   }
+   }*/
 
   .home .localservices-search {
       width: 380px;
@@ -171,10 +171,10 @@ input::-moz-placeholder {
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1700px) {
   
-  .home .localservices-search--container {
+/*  .home .localservices-search--container {
       top: 95px;
       height: 108px;
-  }
+  }*/
 
   .localservices-search {
       font-size: 3vw;
