--- a/css/button.css
+++ b/css/button.css
@@ -9,7 +9,7 @@
 
 
 .topbar .homepage_buttons {
-  padding-top: calc(110px + 4.5vw);
+  padding-top: 90px;
 /*  margin-bottom: 1vw;*/
   text-align: center;
   box-shadow      : 0px 1px 4px 2px rgba(128,128,128,0.5);
@@ -79,7 +79,9 @@
 /* Small Devices, latest Phones */ 
 @media only screen and (min-width : 380px) {
 
-
+.topbar .homepage_buttons {
+  padding-top: 100px;
+}
 
 }
 /* ------------------------------------------- */
@@ -91,7 +93,7 @@
 
 
   .topbar .homepage_buttons {
-    padding-top: 175px;
+    padding-top: 146px;
     padding-bottom: 5px;
     white-space: nowrap;
   }
@@ -169,7 +171,7 @@
 
 
   .topbar .homepage_buttons {
-      padding-top: 84px;
+      padding-top: 75px;
     padding-bottom: 10px;
   }
 
@@ -216,6 +218,11 @@
 
 }
 
+@media only screen and (min-width : 1250px) {
+
+
+}
+
 /* ------------------------------------------- */
 
 /* Large Devices, Wide Screens */
@@ -233,8 +240,4 @@
       vertical-align: middle;
   }
 
-  /* homepage buttons are different */
-  .topbar .homepage_buttons {
-      padding-top: 109px;
-  }
 }
